partial views added

--- a/Weather-App/web-server/public/css/styles.css
+++ b/Weather-App/web-server/public/css/styles.css
@@ -12,5 +12,17 @@ img {
 }
 
 body{
+    margin: 0;
     background-color: black;
+}
+
+footer {
+    bottom: 0px;  
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    background-color: #333;
+    color: #fff;
+    position: fixed;
+    width: 100%;  
 }
