--- a/Weather-App/web-server/templates/views/index.hbs
+++ b/Weather-App/web-server/templates/views/index.hbs
@@ -7,9 +7,12 @@
     </head>
 
     <body>
-        <h2>{{title}}</h2>
+        {{>header}}
         <img src="/img/dark.jpg">
-        <h3>Created by {{name}}</h3>
     </body>
+
+    <footer>
+        {{>footer}}
+    </footer>
 
 </html>
