--- a/Weather-App/web-server/templates/views/help.hbs
+++ b/Weather-App/web-server/templates/views/help.hbs
@@ -7,8 +7,12 @@
     </head>
 
     <body>
-        <h2>{{title}}</h2>
-        <h3>Created by {{name}}</h3>
+        {{>header}}
+        <h3>{{message}}</h3>
     </body>
+
+    <footer>
+        {{>footer}}
+    </footer>
 
 </html>
