--- a/Weather-App/web-server/templates/partial/header.hbs
+++ b/Weather-App/web-server/templates/partial/header.hbs
@@ -7,10 +7,12 @@
 
 <body>
     <div class="topnav">
-          <a class="active" href="/">Home</a>
-          <a href="/help">Help</a>
+          <a class="active" href="/" onclick="make(0)">Home</a>
+          <a class="active" href="/help" onclick="make(1)">Help</a>
     </div>
 
     <h2>{{title}}</h2>
 </body>
+
+<script src="js/partial.js" defer></script>
 
