--- a/Weather-App/web-server/templates/partial/header.hbs
+++ b/Weather-App/web-server/templates/partial/header.hbs
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/partial-styles.css">
-</head>
+<header>
+    <h1>{{title}}</h1>
 
-<body>
-    <div class="topnav">
-          <a class="active" href="/" onclick="make(0)">Home</a>
-          <a class="active" href="/help" onclick="make(1)">Help</a>
-    </div>
-
-    <h2>{{title}}</h2>
-</body>
-
-<script src="js/partial.js" defer></script>
-
+    <a href="/">Weather</a>
+    <a href="/about">About</a>
+    <a href="/help">Help</a>
+</header>
