--- a/Weather-App/web-server/public/css/styles.css
+++ b/Weather-App/web-server/public/css/styles.css
@@ -1,29 +1,42 @@
-h2 {
-    color: red
-}
-
-h3 {
-    color: white
-}
-
-img {
-    width: 250px;
-    border: 2px solid white;
-}
-
-body{
-    margin: 0;
-    background-color: black;
+body {
+    color: #333333;
     font-family: arial;
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 0 16px;
+    display: flex;
+    background-color: beige;
+    flex-direction: column;
+    min-height: 100vh
+}
+
+.main-content {
+    flex-grow: 1;
 }
 
 footer {
-    bottom: 0px;  
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-    background-color: #333;
-    color: #fff;
-    position: fixed;
-    width: 100%;  
+    color: #f0f0f0;
+    border-top: 1px solid #eeeeee;
+    margin-top: 16px;
+    padding: 16px 0;
+}
+
+header {
+    margin-top: 16px;
+    margin-bottom: 48px;
+}
+
+h1 {
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
+header a {
+    color: #888888;
+    margin-right: 16px;
+    text-decoration: none;
+}
+
+.portrait {
+    width: 250px;
 }
