--- a/Weather-App/web-server/templates/views/help.hbs
+++ b/Weather-App/web-server/templates/views/help.hbs
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <link rel="stylesheet" href="/css/styles.css">
-        <script src="/js/app.js"></script>
-    </head>
 
-    <body>
+<head>
+    <title>Help</title>
+    <link rel="icon" href="/img/weather.png">
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
+
+<body>
+    <div class="main-content">
         {{>header}}
-        <h3>{{message}}</h3>
-    </body>
-
-    <footer>
-        {{>footer}}
-    </footer>
+        <p>{{helpText}}</p>
+    </div>
+    
+    {{>footer}}
+</body>
 
 </html>
