--- a/Dictionary-App/web-server/public/css/styles.css
+++ b/Dictionary-App/web-server/public/css/styles.css
@@ -42,8 +42,15 @@ header a {
 }
 
 input {
-    border: 1px solid #cccccc;
     padding: 8px;
+    z-index: 1;
+    width: 300px;
+}
+
+textarea {
+    padding: 8px;
+    width: 300px;
+    margin-bottom: 5px;
 }
 
 button {
@@ -59,9 +66,9 @@ button {
     z-index: 1;
     font-family: inherit;
     color: #17C3B2;
-   }
-   
-   button::before {
+}
+
+button::before {
     content: '';
     width: 0;
     height: 300%;
@@ -73,13 +80,20 @@ button {
     transition: .5s ease;
     display: block;
     z-index: -1;
-   }
-   
-   button:hover::before {
+}
+
+button:hover::before {
     width: 105%;
-   }
-   
-   button:hover {
+}
+
+button:hover {
     color: #111;
-   }
-   
+}
+
+#meaning {
+    display: none;
+}
+
+#sentence {
+    display: none;
+}
